src/css/main.css
/*
 * HTML5 Boilerplate
 *
 * What follows is the result of much research on cross-browser styling.
 * Credit left inline and big thanks to Nicolas Gallagher, Jonathan Neal,
 * Kroc Camen, and the H5BP dev community and team.
 */

/* ==========================================================================
   Base styles: opinionated defaults
   ========================================================================== */

html,
button,
input,
select,
textarea {
    color: #222;
}

body {
    font-size: 1em;
    line-height: 1.4;
}

/*
 * Remove text-shadow in selection highlight: h5bp.com/i
 * These selection declarations have to be separate.
 * Customize the background color to match your design.
 */

::-moz-selection {
    background: #b3d4fc;
    text-shadow: none;
}

::selection {
    background: #b3d4fc;
    text-shadow: none;
}

/*
 * A better looking default horizontal rule
 */

hr {
    display: block;
    height: 1px;
    border: 0;
    border-top: 1px solid #ccc;
    margin: 1em 0;
    padding: 0;
}

/*
 * Remove the gap between images and the bottom of their containers: h5bp.com/i/440
 */

img {
    vertical-align: middle;
}

/*
 * Remove default fieldset styles.
 */

fieldset {
    border: 0;
    margin: 0;
    padding: 0;
}

/*
 * Allow only vertical resizing of textareas.
 */

textarea {
    resize: vertical;
}

/* ==========================================================================
   Chrome Frame prompt
   ========================================================================== */

.chromeframe {
    margin: 0.2em 0;
    background: #ccc;
    color: #000;
    padding: 0.2em 0;
}

/* ==========================================================================
   Author's custom styles
   ========================================================================== */

body{
    background: black;
    overflow: hidden;
}

#loader{
    position: absolute;
    top: 0px;
    left: 0px;
    width: 100%;
    height: 100%;
    z-index: 100;
    background:-webkit-radial-gradient(circle, white, #ccc);;    
}

#spinner{
    position: absolute;
    left: 50%;
    top: 50%;
    margin-left: -50px;
    margin-top: -50px;
    width: 100px;
    height: 100px;
    background: url(../img/spinner.gif);
    background-repeat: no-repeat;
    background-position: center center;
}

#filterHolder{
    position: absolute;
    bottom: 0px;
    width: 100%;
    height: 50px;
    padding-bottom: 30px;
    overflow-x: scroll;
    -webkit-overflow-scrolling: touch;
    background:-webkit-gradient(linear, left top, left bottom, from(transparent), color-stop(.399, transparent), color-stop(.4, rgba(0, 0, 0, 1)), to(rgba(123, 123, 123, 1)));
}

#filterHolder::-webkit-scrollbar { width: 0 !important }

#slideHitArea{
    position: relative;
    height: 100%;
    width: 100%;
}

#selectedNotifier{
    position: absolute;
    width: 8px;
    height: 6px;
    bottom: -15px;
    left: 0px;
    background-image: url(../img/selected.svg);
    background-repeat: no-repeat;
    background-position: center center;
    -webkit-transform: translate3d(25px, 0px, 0px);
    -webkit-transition: all .4s;
}

#photoHolder{
    width: 100%;
    height: 100%;
    margin: auto;
    overflow: hidden;
}

.filter-btn{
    position: absolute;
    display: block;
    margin: 0px 5px;
    height: 50px;
    width: 50px;
    background-color: black;
    background-size: cover;
    background-image: url(../img/thumbnails/thumb.jpg);
    background-repeat: no-repeat;
    border-radius: 10px;
    cursor: pointer;
    -webkit-tap-highlight-color: transparent;
    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
}

.filter-label{
    position: absolute;
    left: 50%;
    bottom: -5px;
    margin-left: -25px;
    width: 100%;
    text-align:center;
    color: white;
    font-weight: bold;
    font-size: 10px;
    text-shadow: 0px 0px 5px rgba(0, 0, 0, 1);
    -webkit-box-reflect: below -5px -webkit-gradient(linear, left top, left bottom, from(rgba(255, 255, 255, 0)), to(rgba(255, 255, 255, 0.5)));
    -webkit-touch-callout: none;
    -webkit-user-select: none;
}

.photo{
    position: absolute;
    width: 100%;
    height: 100%;
    background-image: url(../img/photo8.png);
    background-position: center center;
    background-repeat: no-repeat;
    background-size: cover;        
    /* force hw acceletation for filters */
    -webkit-transform: translateZ(0);
}

#normal{
    background-position: -200px 0px;
}

#bnw{
    background-position: -300px 0px;
}

#sepia{
    background-position: -50px 0px;
}

#old-style{
    background-position: -150px 0px;
}

#saturate{
    background-position: -100px 0px;
}

#blue{
    background-position: 0px 0px;
}

#red{
    background-position: -400px 0px;
}

#green{
    background-position: -250px 0px;
}

#softblur{
    background-position: -350px 0px;
}


/* ==========================================================================
   Helper classes
   ========================================================================== */

/*
 * Image replacement
 */

.ir {
    background-color: transparent;
    border: 0;
    overflow: hidden;
    /* IE 6/7 fallback */
    *text-indent: -9999px;
}

.ir:before {
    content: "";
    display: block;
    width: 0;
    height: 100%;
}

/*
 * Hide from both screenreaders and browsers: h5bp.com/u
 */

.hidden {
    display: none !important;
    visibility: hidden;
}

/*
 * Hide only visually, but have it available for screenreaders: h5bp.com/v
 */

.visuallyhidden {
    border: 0;
    clip: rect(0 0 0 0);
    height: 1px;
    margin: -1px;
    overflow: hidden;
    padding: 0;
    position: absolute;
    width: 1px;
}

/*
 * Extends the .visuallyhidden class to allow the element to be focusable
 * when navigated to via the keyboard: h5bp.com/p
 */

.visuallyhidden.focusable:active,
.visuallyhidden.focusable:focus {
    clip: auto;
    height: auto;
    margin: 0;
    overflow: visible;
    position: static;
    width: auto;
}

/*
 * Hide visually and from screenreaders, but maintain layout
 */

.invisible {
    visibility: hidden;
}

/*
 * Clearfix: contain floats
 *
 * For modern browsers
 * 1. The space content is one way to avoid an Opera bug when the
 *    `contenteditable` attribute is included anywhere else in the document.
 *    Otherwise it causes space to appear at the top and bottom of elements
 *    that receive the `clearfix` class.
 * 2. The use of `table` rather than `block` is only necessary if using
 *    `:before` to contain the top-margins of child elements.
 */

.clearfix:before,
.clearfix:after {
    content: " "; /* 1 */
    display: table; /* 2 */
}

.clearfix:after {
    clear: both;
}

/*
 * For IE 6/7 only
 * Include this rule to trigger hasLayout and contain floats.
 */

.clearfix {
    *zoom: 1;
}

/* ==========================================================================
   EXAMPLE Media Queries for Responsive Design.
   Theses examples override the primary ('mobile first') styles.
   Modify as content requires.
   ========================================================================== */

@media only screen and (min-width: 35em) {
    /* Style adjustments for viewports that meet the condition */
}

@media only screen and (-webkit-min-device-pixel-ratio: 1.5),
       only screen and (min-resolution: 144dpi) {
    /* Style adjustments for high resolution devices */
}

/* ==========================================================================
   Print styles.
   Inlined to avoid required HTTP connection: h5bp.com/r
   ========================================================================== */

@media print {
    * {
        background: transparent !important;
        color: #000 !important; /* Black prints faster: h5bp.com/s */
        box-shadow:none !important;
        text-shadow: none !important;
    }

    a,
    a:visited {
        text-decoration: underline;
    }

    a[href]:after {
        content: " (" attr(href) ")";
    }

    abbr[title]:after {
        content: " (" attr(title) ")";
    }

    /*
     * Don't show links for images, or javascript/internal links
     */

    .ir a:after,
    a[href^="javascript:"]:after,
    a[href^="#"]:after {
        content: "";
    }

    pre,
    blockquote {
        border: 1px solid #999;
        page-break-inside: avoid;
    }

    thead {
        display: table-header-group; /* h5bp.com/t */
    }

    tr,
    img {
        page-break-inside: avoid;
    }

    img {
        max-width: 100% !important;
    }

    @page {
        margin: 0.5cm;
    }

    p,
    h2,
    h3 {
        orphans: 3;
        widows: 3;
    }

    h2,
    h3 {
        page-break-after: avoid;
    }
}

